2006-02-01  David Reveman  <davidr@novell.com>

	* fb/fbbltone.c: Negative stride fix.

	* hw/xgl/xglglx.h:
	* hw/xgl/xglglx.c:
	* hw/xgl/glxext/xglglxext.c: Some GLX code cleanups.

	* hw/xgl/glxext/xglglxlog.c:
	* hw/xgl/glxext/xglglxext.c: Match _glapi_table in mesa 6.4.1.
	(xglScreenProbe): __xglScreenInfo -> __xglScreenInfoPtr.

	* hw/xgl/glxext/xglglxlog.c: 
	* hw/xgl/glxext/xglglxext.c (xglScreenProbe): modes are no longer
	necessarily in an array.

	* hw/xgl/xglcompose.c (xglCompositeGeneral):
	* hw/xgl/xglpict.c (xglUpdatePicture): repeat -> repeatType.

2006-01-18  Dave Airlie  <airlied@linux.ie>

	* Xext/Makefile.am:
	* dbe/Makefile.am:
	* fb/Makefile.am:
	* include/Makefile.am:
	* mi/Makefile.am:
	* miext/shadow/Makefile.am:
	* render/Makefile.am:
	Wrap sdk_HEADERS in if XORG as otherwise installing non-xorg
	servers breaks.

2006-01-18  Dave Airlie  <airlied@linux.ie>

	reviewed by: keithp, ajax, anholt (well they all read it...)

	* fb/fbgc.c: (fbPadPixmap):
	This is a fix from David Reveman from the xserver tree,
	Make fbPadPixmap work with negative stride

Thu Jan 12 17:09:18 2006  Søren Sandmann  <sandmann@redhat.com>

	* include/window.[ch]: Add new functions to enable and disable
	events on Map and Unmap. 

	* composite/compalloc.c: Use them here to make sure Composite
	redirect doesn't cause Map/UnmapNotify events that would confuse
	window managers. 

2006-01-11  Ian Romanick  <idr@us.ibm.com>

	reviewed by: airlied, krh

	* GL/glx/Makefile.am:
	* GL/glx/g_disptab.c:
	* GL/glx/g_disptab.h:
	* GL/glx/g_disptab_EXT.c:
	* GL/glx/g_disptab_EXT.h:
	* GL/glx/g_render.c:
	* GL/glx/g_renderswap.c:
	* GL/glx/g_single.c:
	* GL/glx/g_singleswap.c:
	* GL/glx/glxcmds.c: (DoMakeCurrent), (__glXWaitGL),
	(__glXCopyContext), (__glXSwapBuffers), (__glXVendorPrivate):
	* GL/glx/glxcmdsswap.c: (__glXSwapVendorPrivate):
	* GL/glx/glxserver.h:
	* GL/glx/impsize.h:
	* GL/glx/indirect_dispatch.c: (__glXDisp_NewList),